2005-01-11  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/intr.c (rt_intr_create): Use specific prototype
	for user-space.

	* skins/rtai/intr.c (rt_intr_inquire): Do not provide the number
	of currently pending waiters; track the count of interrupt hits
	instead, using the information now available at the nucleus level.
	
	* include/nucleus/intr.h: Track number of interrupt hits.

	* skins/rtai/task.h: T_HOOK_DESC() -> T_DESC() for naming
	consistency with I_DESC().

	* skins/rtai/intr.c (rt_intr_wait): Make this service a user-space
	only service -- Fully align semantics with rt_alarm_wait().

	* drivers/16550A/16550A.c (rt_uart_close): Add missing
	unregistration.

2005-01-10  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* testsuite: Provide normalized tabular format for printing
	measurements.
	
2005-01-10  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_unregister_interface): Accept to
	unregister the interface even if the refcount is zero, which
	basically means that some non-shadow Linux task has attached the
	interface but the latter does not own any existing thread. This is
	sub-optimal since we loose the refcnt guarantee for interfaces
	which do not create threads, but prevents dandling
	/proc/rtai/interfaces entries to appear.

	* skins/rtai/intr.c, drivers/16550A/16550A.c: Store the
	registration key into the descriptor as required by
	rt_registry_enter().

	* skins/rtai/syscall.c: Make rt_task_delete() a regular context
	syscall.

2005-01-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/hal.c (rthal_calibrate_timer): Stop using
	rthal_llimd() uselessly.

	* include/nucleus/intr.h: Move the ISR return codes to the
	context-independent section, so that they are also visible from
	user-space.

2005-01-08  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h (xnarch_init): Fix the error
	return path to prevent bad system lockup if the calibration
	happens to fail.
