@@ -1,5 +1,8 @@
 2005-01-11  Philippe Gerum  <rpm@xenomai.org>
 
+	* skins/rtai/syscall.c (__rt_intr_wait): Raise task priority as
+	needed.
+
 	* skins/rtai/lib/intr.c (rt_intr_create): Use specific prototype
 	for user-space.
 
